manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: wg-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "traefik.wg.dphx.eu"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - traefik.cluster.dphx.eu
    secretName: traefik-dashboard-tls
  rules:
  - host: traefik.cluster.dphx.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-traefik
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: wg-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "guacamole.wg.dphx.eu"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - guacamole.cluster.dphx.eu
    secretName: guacamole-tls
  rules:
  - host: guacamole.cluster.dphx.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-guacamole
            port:
              number: 443
---
# External service that points to guacamole.wg.dphx.eu
apiVersion: v1
kind: Service
metadata:
  name: external-guacamole
  namespace: wg-proxy
spec:
  type: ExternalName
  externalName: guacamole.wg.dphx.eu
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: external-traefik
  namespace: wg-proxy
spec:
  type: ExternalName
  externalName: traefik.wg.dphx.eu
  ports:
  - port: 443
